# Poker-GameCPP

./: .gitmodules  CMakeLists.txt  Doxyfile  PokerGameCPP.sln  PokerGameCPP.vcxproj  PokerGameCPP.vcxproj.filters  README.md
PokerClientCPP/: CMakeLists.txt  PokerClientCPP.vcxproj  PokerClientCPP.vcxproj.filters  ThirdPartyLibs.props
PokerClientCPP/include/: BaseGameApplication.h  ClientNetworkManager.h  ConsoleMenuController.h  ConsoleMenuView.h  GameApplication.h  GameSettings.h  IMenuController.h  IMenuView.h  IOutputHandler.h  MenuChoice.h
PokerClientCPP/src/: BaseGameApplication.cpp  ClientNetworkManager.cpp  ConsoleInputHandler.cpp  ConsoleMenuController.cpp  ConsoleMenuView.cpp  ConsoleUtils.cpp  GameApplication.cpp  HandEvaluator.cpp  HandScore.cpp  clientMain.cpp
PokerGameStaticLib/: CMakeLists.txt  PokerGameStaticLib.vcxproj  PokerGameStaticLib.vcxproj.filters
PokerGameStaticLib/include/: BotPlayerLogic.h  CardFormatter.h  Cards.h  ConsoleCONSTANS.h  ConsoleInputHandler.h  ConsoleOutputHandler.h  ConsoleUtils.h  Deck.h  DeckType.h  GameManager.h  HandEvaluator.h  HandScore.h  HumanPlayerLogic.h  IInputHandler.h  IOutputHandler.h  NetworkCommands.h  PlayerAction.h  PlayerLogicParent.h  PlayerState.h  PublicPlayerInfo.h  TableState.h  TexasHoldemManager.h
PokerGameStaticLib/include/server/: NetworkInputHandler.h  (+3 more)
PokerGameStaticLib/src/: BotPlayerLogic.cpp  CardFormatter.cpp  ConsoleInputHandler.cpp  ConsoleOutputHandler.cpp  ConsoleUtils.cpp  Deck.cpp  HandEvaluator.cpp  HandScore.cpp  HumanPlayerLogic.cpp  PlayerLogicParent.cpp  TexasHoldemManager.cpp
(+64 files in other folders)
